objects/vlocity_cmt__OrchestrationItemLog__b.object
<CustomObject>
    <description>Represents orchestration item callout attempts. OrchestrationItemLog__b is a big object, which includes orchestration item requests and responses.</description>
    <fields>
        <fullName>vlocity_cmt__NumberOfRetries__c</fullName>
        <description>The number of orchestration retries initiated by the orchestration item.</description>
        <label>Actual Number Of Retries</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationItemId__c</fullName>
        <description>The orchestration item associated with the orchestration item log.</description>
        <label>Orchestration Item</label>
        <referenceTo>vlocity_cmt__OrchestrationItem__c</referenceTo>
        <relationshipLabel>Orchestration Item Log</relationshipLabel>
        <relationshipName>OrchestrationItemLog</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationItemType__c</fullName>
        <description>The orchestration item&apos;s type. Possible values include Callout, Push Event, Auto Task, Milestone, Manual Task.</description>
        <label>Orchestration Item Type</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Request__c</fullName>
        <description>The orchestration item request JSON or XML data.</description>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Response__c</fullName>
        <description>The orchestration item response JSON or XML data.</description>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <description>The state of the orchestration item.</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SystemInterfaceId__c</fullName>
        <description>The system interface associated with the orchestration item log.</description>
        <label>System Interface</label>
        <referenceTo>vlocity_cmt__SystemInterface__c</referenceTo>
        <relationshipLabel>Orchestration Item Log</relationshipLabel>
        <relationshipName>SystemInterface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimestampCompleted__c</fullName>
        <description>The date and time the orchestration item was moved to the Completed state.</description>
        <label>Timestamp (Completed)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimestampReady__c</fullName>
        <description>The date and time the orchestration item was moved to the Ready state.</description>
        <label>Timestamp (Ready)</label>
        <type>DateTime</type>
    </fields>
    <indexes>
        <fullName>vlocity_cmt__OrchestrationItemLogIndex</fullName>
        <fields>
            <name>vlocity_cmt__OrchestrationItemId__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>vlocity_cmt__NumberOfRetries__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>OrchestrationItemLogIndex</label>
    </indexes>
    <label>Orchestration Item Log</label>
    <pluralLabel>Orchestration Item Logs</pluralLabel>
</CustomObject>